<resources>
    <string name="app_name">SpaceX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="company">COMPANY</string>
    <string name="launches">LAUNCHES</string>
    <string name="company_summary">%1$s was founded by %2$s in %3$d. It has now %4$d employees, %5$d launch sites, and is valued at USD %6$d.</string>
    <string name="mission">Mission:</string>
    <string name="date_time">Date/Time:</string>
    <string name="rocket">Rocket:</string>
    <string name="days_now">Days %1$s now:</string>
    <string name="rocket_info">%1$s / %2$s</string>
    <string name="date_at_time">%1$s at %2$s</string>
    <string name="from">from</string>
    <string name="since">since</string>
    <string name="filter">Filter</string>
    <string name="by_year">By year(s):</string>
    <string name="by_successful_launches_only">By successful launches only:</string>
    <string name="sorted_by">Sorted by:</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="click_to_open_one_of_the_links_bellow">Click to open one of the links bellow</string>
    <string name="no_links_found">No links found!</string>
    <string name="unfortunately_no_links_attached">Unfortunately this mission doesn\'t have links attached :[</string>
    <string name="close">Close</string>
    <string name="filter_the_launches_list">Filter the launches list</string>
    <string name="clear_filters">Clear Filters</string>
</resources>