<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/launchCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:clickable="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/patchImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/mission"
                app:layout_constraintStart_toEndOf="@+id/patchImage"
                app:layout_constraintTop_toTopOf="@+id/patchImage" />

            <TextView
                android:id="@+id/missionName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:singleLine="false"
                app:layout_constraintBottom_toBottomOf="@+id/mission"
                app:layout_constraintEnd_toStartOf="@+id/launchSuccessIcon"
                app:layout_constraintStart_toStartOf="@+id/dateTimeValue"
                app:layout_constraintTop_toTopOf="@+id/mission"
                tools:text="FalconSatFalconSatFalcalconSat" />

            <TextView
                android:id="@+id/dateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/date_time"
                app:layout_constraintStart_toStartOf="@+id/mission"
                app:layout_constraintTop_toBottomOf="@+id/mission" />

            <TextView
                android:id="@+id/dateTimeValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date_at_time"
                app:layout_constraintBottom_toBottomOf="@+id/dateTime"
                app:layout_constraintEnd_toStartOf="@+id/launchSuccessIcon"
                app:layout_constraintStart_toStartOf="@+id/rocketAlias"
                app:layout_constraintTop_toTopOf="@+id/dateTime"
                tools:text="2006-03-24T22:30:00.000Z" />

            <TextView
                android:id="@+id/rocket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rocket"
                app:layout_constraintStart_toStartOf="@+id/dateTime"
                app:layout_constraintTop_toBottomOf="@+id/dateTime" />

            <TextView
                android:id="@+id/rocketAlias"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rocket_info"
                app:layout_constraintBottom_toBottomOf="@+id/rocket"
                app:layout_constraintEnd_toStartOf="@+id/launchSuccessIcon"
                app:layout_constraintStart_toStartOf="@+id/daysLaunchValue"
                app:layout_constraintTop_toTopOf="@+id/rocket"
                tools:text="Falcon 1 / Merlin A" />

            <TextView
                android:id="@+id/daysLaunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="12dp"
                android:text="@string/days_now"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/rocket"
                app:layout_constraintTop_toBottomOf="@+id/rocket" />

            <TextView
                android:id="@+id/daysLaunchValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/daysLaunch"
                app:layout_constraintStart_toEndOf="@+id/daysLaunch"
                tools:text="12" />

            <ImageView
                android:id="@+id/launchSuccessIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/mission" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>